--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -24,6 +24,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,8 +61,17 @@
    "outputs": [],
    "source": [
     "# reflect an existing database into a new model\n",
-    "\n",
-    "# reflect the tables\n"
+    "base = automap_base()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reflect the tables\n",
+    "base.prepare(engine, reflect=True)"
    ]
   },
   {
@@ -81,7 +91,8 @@
     }
    ],
    "source": [
-    "# View all of the classes that automap found\n"
+    "# View all of the classes that automap found\n",
+    "base.classes.keys()"
    ]
   },
   {
@@ -90,7 +101,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save references to each table\n"
+    "# Save references to each table\n",
+    "Measurement = base.classes.measurement\n",
+    "Station = base.classes.station"
    ]
   },
   {
@@ -99,10 +112,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create our session (link) from Python to the DB\n"
+    "# Create our session (link) from Python to the DB\n",
+    "session = Session(engine)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -126,7 +141,9 @@
     }
    ],
    "source": [
-    "# Find the most recent date in the data set.\n"
+    "# Find the most recent date in the data set.\n",
+    "recent_date = session.query(Measurement.date).order_by(Measurement.date.desc()).first()\n",
+    "recent_date"
    ]
   },
   {
@@ -158,20 +175,32 @@
    "source": [
     "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
     "# Starting from the most recent data point in the database. \n",
+    "last_12_months = session.query(Measurement.date, Measurement.prcp).\\\n",
+    "    filter(Measurement.date > '2016-08-23').\\\n",
+    "    order_by(Measurement.date).all()\n",
     "\n",
     "# Calculate the date one year from the last date in data set.\n",
-    "\n",
+    "one_year_ago = dt.date(2017, 8, 23) - dt.timedelta(days=365)\n",
     "\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
+    "precipitation = session.query(Measurement.date, Measurement.prcp).\\\n",
+    "    filter(Measurement.date >= one_year_ago).\\\n",
+    "    order_by(Measurement.date).all()\n",
     "\n",
     "\n",
     "# Save the query results as a Pandas DataFrame. Explicitly set the column names\n",
-    "\n",
+    "dataframe = pd.DataFrame(precipitation, columns=['Date', 'Precipitation'])\n",
     "\n",
     "# Sort the dataframe by date\n",
+    "dataframe.set_index('Date', inplace=True)\n",
     "\n",
     "\n",
-    "# Use Pandas Plotting with Matplotlib to plot the data\n"
+    "# Use Pandas Plotting with Matplotlib to plot the data\n",
+    "dataframe.plot(title=\"Precipitation (12 months)\")\n",
+    "plt.xlabel(\"Date\")\n",
+    "plt.ylabel(\"Precipitation (inches)\")\n",
+    "plt.legend(loc='upper center')\n",
+    "plt.show()"
    ]
   },
   {
@@ -258,10 +287,12 @@
     }
    ],
    "source": [
-    "# Use Pandas to calculate the summary statistics for the precipitation data\n"
+    "# Use Pandas to calculate the summary statistics for the precipitation data\n",
+    "dataframe.describe()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -285,7 +316,9 @@
     }
    ],
    "source": [
-    "# Design a query to calculate the total number of stations in the dataset\n"
+    "# Design a query to calculate the total number of stations in the dataset\n",
+    "station_count = session.query(Station).count()\n",
+    "station_count"
    ]
   },
   {
@@ -314,7 +347,10 @@
    ],
    "source": [
     "# Design a query to find the most active stations (i.e. which stations have the most rows?)\n",
-    "# List the stations and their counts in descending order.\n"
+    "# List the stations and their counts in descending order.\n",
+    "session.query(Measurement.station, func.count(Measurement.station)).\\\n",
+    "    group_by(Measurement.station).\\\n",
+    "    order_by((func.count(Measurement.station)).desc()).all()"
    ]
   },
   {
@@ -334,7 +370,9 @@
     }
    ],
    "source": [
-    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n"
+    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
+    "session.query(func.min(Measurement.station), func.max(Measurement.station), func.avg(Measurement.station)).\\\n",
+    "    filter(Measurement.station == 'USC00519281').all()"
    ]
   },
   {
@@ -365,10 +403,20 @@
    ],
    "source": [
     "# Using the most active station id\n",
-    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n"
+    "last_12 =session.query(Measurement.station).\\\n",
+    "    filter(Measurement.station == 'USC00519281').\\\n",
+    "    filter(Measurement.date >= one_year_ago).all()\n",
+    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
+    "station_df = pd.DataFrame(last_12, columns=['station'])\n",
+    "staion_df.plot.hist(bins=12, title=\"Temperature vs. Frequency Histogram\")\n",
+    "plt.xlabel(\"Temperature\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.show()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
